# gitsync

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
gitsync/: cli.py  push.py  utils.py
gitsync/data/: gitsync.json  gitsync.schema.json  gitsync.yaml
papersync/: cli.py  utils.py
statex/data/: papersync.yaml
tests/: test_push.py  utils.py
