[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statex"
version = "0.1.0"
description = "A tool for syncing LaTeX projects with Git and external folders."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL3"}
authors = [
    {name = "Romain Ferrali", email = "rferrali@gmail.com"}
]
dependencies = [
    "click>=8.1",
    "GitPython>=3.1",
    "python-dotenv>=1.0",
    "pyyaml>=5.3"
]
keywords = ["latex", "git", "sync"]
[project.urls]
Homepage = "https://github.com/rferrali/papersync"